--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,3 +9,5 @@ Install Grafana and InfluxDB to RPI and use for graphing historical data
 points.
 
 3: Code Cleanup
+	perhaps move function declaration to header file, create small library
+for publish/serial/lcd print sensor readings
